Fixed-19449: Import History table alignment issue.

--- a/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
@@ -41,6 +41,11 @@
     overflow-x: auto;
     padding-bottom: 1rem;
     padding-top: @data-grid-header-row__indent;
+    .col-imported_file {
+        > p  {
+            display: none;
+        }
+    }
 }
 
 .admin__data-grid-loading-mask {
